--- a/README.adoc
+++ b/README.adoc
@@ -23,14 +23,13 @@ What's unique about these boards, is that they have two processors:
 
 In order to use this library, you have to flash the Bluepad32 firmware in the NINA (ESP32) processor.
 This is a simple step that needs to be done just once, and can be undone at any time.
-
 More info about Bluepad32 for NINA here:
 
 * Instructions: https://gitlab.com/ricardoquesada/bluepad32/-/blob/master/docs/plat_nina.md
 * Download: https://gitlab.com/ricardoquesada/bluepad32/-/releases
 
 
-With this library you can use any modern Bluetooth gamepad in Arduino. Some of the supported gamepads, but not limited to are:
+With this library you can use any modern Bluetooth gamepad in Arduino. Some of the supported gamepads, but not limited to, are:
 
 * DualSense (PS5)
 * DualShock 4 (PS4)
@@ -45,6 +44,15 @@ With this library you can use any modern Bluetooth gamepad in Arduino. Some of t
 * 8Bitdo gamepads
 * iCade
 * and more
+
+== Use cases ==
+
+You can use this library to:
+
+* Create a video game
+* Or control a car
+* Or control LEDs, motor, etc.
+* etc.
 
 == License ==
 
