--- a/README.adoc
+++ b/README.adoc
@@ -5,9 +5,7 @@
 
 = {project-name} library for Arduino =
 
-
-image::https://lh3.googleusercontent.com/pw/AM-JKLWUZS_vlkMmd3o8EKzXlYCS0uriEW_gXfOoiFqZlABJi_dM1GWYHGafrdMnTP-VHgVdCdVA4pUageZgyI98RH1SHtydac2yyrx_vJVXgWPYBFN-SJoOikdlGuOowPoDqYOwfKU39yketYPJyRJlIPwjEw=-no[gamepads]
-
+image::bluepad32-arduino-logo.png[logo]
 
 Enables gamepad support for NINA-based boards, like:
 
@@ -28,6 +26,9 @@ More info about Bluepad32 for NINA here:
 * Instructions: https://gitlab.com/ricardoquesada/bluepad32/-/blob/master/docs/plat_nina.md
 * Download: https://gitlab.com/ricardoquesada/bluepad32/-/releases
 
+== Supported gamepads ==
+
+image::https://lh3.googleusercontent.com/pw/AM-JKLWUZS_vlkMmd3o8EKzXlYCS0uriEW_gXfOoiFqZlABJi_dM1GWYHGafrdMnTP-VHgVdCdVA4pUageZgyI98RH1SHtydac2yyrx_vJVXgWPYBFN-SJoOikdlGuOowPoDqYOwfKU39yketYPJyRJlIPwjEw=-no[gamepads]
 
 With this library you can use any modern Bluetooth gamepad in Arduino. Some of the supported gamepads, but not limited to, are:
 
