--- a/README.adoc
+++ b/README.adoc
@@ -14,6 +14,7 @@ Enables gamepad support for NINA-based boards, like:
 * https://store.arduino.cc/usa/nano-rp2040-connect-with-headers[Arduino Nano RP2040 Connect]
 * https://store.arduino.cc/usa/nano-33-iot[Arduino Nano 33 IoT]
 * https://store.arduino.cc/usa/mkr-wifi-1010[Arduino MKR WiFi 1010]
+* http://store.arduino.cc/products/arduino-uno-wifi-rev2[Arduino UNO WiFi Rev2]
 * etc.
 
 == Supported gamepads ==
