BP32: Add enableNewBluetoothConnection()
Requries Bluepad32 firmware v3.5 or newer.

Fixes issue https://github.com/ricardoquesada/bluepad32/issues/21

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Bluepad32 1.1.2 - 2022.06.??
+
+* Add BP32.enableNewBluetoothConnections()
+  Requires Bluepad32 v3.5 or newer
+
 Bluepad32 1.1.1 - 2022.04.18
 
 * Fix compilation warnings
