--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
-Bluepad32 1.1.2 - 2022.06.??
+Bluepad32 1.1.2 - 2022.06.18
 
 * Add BP32.enableNewBluetoothConnections()
-  Requires Bluepad32 v3.5 or newer
+  Requires Bluepad32 v3.5-beta1 or newer
+* Add additional GAMEPAD_PROPERTY_FLAG_* in GamepadProperties.h:
+  Useful to identify whether the controller is a gamepad, mouse or keyboard.
 
 Bluepad32 1.1.1 - 2022.04.18
 
