--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Bluepad32 1.1.4 - 2022.10.16
+
+* Add Gamepad.disconnect()
+  Requires Bluepad32 v.3.5.2 or newer
+
 Bluepad32 1.1.3 - 2022.07.04
 
 * Update description in BP32.enableNewBluetoothConnections();
