--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Bluepad32 1.1.5 - 2023.01.03
+
+* Gamepad.getProperties() return correct info
+
 Bluepad32 1.1.4 - 2022.10.16
 
 * Add Gamepad.disconnect()
