Back to original name

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Bluepad32 1.3.3 - 2024.02.08
+* Back to original name "Bluepad32", otherwise I will have to change the entry in the Arduino repository.
+
 Bluepad32 1.3.2 - 2024.02.08
 * Renamed to "Bluepad32 for NINA" to avoid confusion
 
