--- a/README.adoc
+++ b/README.adoc
@@ -36,7 +36,7 @@ With this library you can use any modern Bluetooth gamepad in Arduino. Some of t
 * Windows gamepads
 * and more
 
-For a complete list, see: https://gitlab.com/ricardoquesada/bluepad32/-/blob/main/docs/supported_gamepads.md
+For a complete list, see: https://bluepad32.readthedocs.io/en/latest/supported_gamepads/
 
 == How does it work ==
 
@@ -59,8 +59,8 @@ So, in order to use the library you have to flash the "Bluepad32 firmware" on NI
 This is a simple step that needs to be done just once, and can be undone at any time.
 Info about Bluepad32 firmware is avaiable here:
 
-* Bluepad32 firmware doc: https://gitlab.com/ricardoquesada/bluepad32/-/blob/master/docs/plat_nina.md
-* Download: https://gitlab.com/ricardoquesada/bluepad32/-/releases
+* Bluepad32 firmware doc: https://bluepad32.readthedocs.io/en/latest/plat_nina/
+* Download: https://github.com/ricardoquesada/bluepad32/releases
 
 
 == Use cases ==
